# DevOps.Scanner.SDK

./: README.md  azure-pipeline-ci.yml  azure-pipeline-deps.yml  pyproject.toml
.github/workflows/: ci.yml  deps.yml  tests.yml
scripts/: gen-badges.sh  setup.sh
scripts/hooks/: pre-push
src/scanner_sdk/: __init__.py  config.py  engine.py  risk.py  settings.py
tests/: test_contract.py
