[project]
name = "scanner-sdk"
version = "0.1.0"
description = "Shared scanner-engine plugin contract for the DevOps.Scanner.* stack"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
# Proper src layout: uv installs the `scanner_sdk` package, so tests import it
# from the installed package — no pythonpath hack.
testpaths = ["tests"]
addopts = "-q"

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"
